# torchMoji

./: .travis.yml  README.md  pyinstaller_entry.py  pyproject.toml  torchmoji-cli.spec
examples/: api_example.py  text_emojize.py
scripts/: build_pyinstaller.py  download_weights.py  pyinstaller_tray.spec
tests/: conftest.py  test_api_server.py  test_api_settings.py  test_build_pyinstaller.py  test_cli.py  test_emojis.py  test_filter_utils.py  test_finetuning.py  test_global_variables.py  test_gui_api_components.py  test_gui_utils.py  test_runtime.py  test_sentence_tokenizer.py  test_settings.py  test_tokenizer.py  test_word_generator.py
torchmoji/: api_server.py  app_cli.py  cli.py  emojis.py  filter_input.py  filter_utils.py  finetuning.py  global_variables.py  gui_main.py  lstm.py  model_def.py  runtime.py  sentence_tokenizer.py  settings.py  tokenizer.py  word_generator.py
torchmoji/gui/: __init__.py  app.py  utils.py
