[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "torchmoji"
version = "1.0"
description = "torchMoji"
readme = "README.md"
authors = [
    { name = "Hugging Face" }
]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "emoji>=1.6,<3",
    "numpy>=1.22,<3",
    "PySide6>=6.6",
    "pystray>=0.19",
    "scipy>=1.8,<2",
    "scikit-learn>=1.1,<2",
    "text-unidecode>=1.3,<2",
    "torch>=1.12,<3"
]

[project.urls]
Homepage = "https://github.com/huggingface/torchMoji"

[project.optional-dependencies]
test = [
    "pytest>=7",
]
gui = []

[project.scripts]
torchmoji = "torchmoji.cli:main"
torchmoji-app = "torchmoji.app_cli:main"
torchmoji-gui = "torchmoji.gui_main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["torchmoji", "torchmoji.*"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow and requires additional resources"
]
